--- a/css/style.scss
+++ b/css/style.scss
@@ -1,24 +1,54 @@
 /* Start Import */
 @import "main";
-body{
+
+body {
     margin: unset;
 }
-.clearfix{
+
+.clearfix {
     clear: both;
 }
 
 nav {
-    p{
+    p {
         float: left;
-        .heart-icon{
+
+        .heart-icon {
             margin-right: 30px;
         }
     }
+
     li {
         list-style: none;
         float: right;
         padding: 10px;
         font-weight: 600;
-        color:#333;
+        color: #333;
+    }
+}
+
+.header {
+    display: flex;
+    align-items: center;
+    padding: unset;
+    .login{
+        display: inline-block;
+    }
+    img {
+        margin-right: 90px;
+    }
+    .search-bar {
+        display: flex;
+        align-items: center;
+        i{
+            color: gray;
+        }
+        input{
+            width: 100%;
+            border: none;
+            border-radius: 10px;
+            padding: 10px;
+            
+        }
     }
 }
