--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 /* Start Import */
 body {
   margin: unset;
+  height: 1500px;
 }
 
 .clearfix {
@@ -25,6 +26,7 @@ nav li {
   display: flex;
   align-items: center;
   padding: unset;
+  margin-bottom: 15px;
 }
 .header .login {
   display: inline-block;
@@ -44,6 +46,50 @@ nav li {
   border: none;
   border-radius: 10px;
   padding: 10px;
+}
+
+.signup {
+  background: url("../images/hero-cityscape.PNG") no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  padding: 150px 300px;
+}
+.signup h1 {
+  width: 250px;
+  font-size: 38px;
+  margin-bottom: 30px;
+}
+.signup p {
+  width: 285px;
+  font-size: 18px;
+  margin-bottom: 30px;
+}
+
+.npm-orgs {
+  background-color: #2C3549;
+  background-attachment: fixed;
+  background-size: cover;
+  padding: 120px;
+}
+.npm-orgs img {
+  margin: 0px 80px 135px 130px;
+}
+.npm-orgs .npm-orgs-desc {
+  display: inline-block;
+}
+.npm-orgs .npm-orgs-desc .npm-orgs-title {
+  font-size: 32px;
+  color: white;
+  width: 280px;
+}
+.npm-orgs .npm-orgs-desc ul {
+  font-size: 18px;
+  color: white;
+  width: 335px;
+}
+.npm-orgs .npm-orgs-desc ul li {
+  line-height: 25px;
+  margin-bottom: 10px;
 }
 
 /*# sourceMappingURL=style.css.map */
