--- a/css/style.scss
+++ b/css/style.scss
@@ -3,6 +3,7 @@
 
 body {
     margin: unset;
+    height: 1500px;
 }
 
 .clearfix {
@@ -31,24 +32,80 @@ nav {
     display: flex;
     align-items: center;
     padding: unset;
-    .login{
+    margin-bottom: 15px;
+
+    .login {
         display: inline-block;
     }
+
     img {
         margin-right: 90px;
     }
+
     .search-bar {
         display: flex;
         align-items: center;
-        i{
+
+        i {
             color: gray;
         }
-        input{
+
+        input {
             width: 100%;
             border: none;
             border-radius: 10px;
             padding: 10px;
-            
+
+        }
+    }
+}
+
+.signup {
+    background: url('../images/hero-cityscape.PNG') no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    padding: 150px 300px;
+
+    h1 {
+        width: 250px;
+        font-size: 38px;
+        margin-bottom: 30px;
+    }
+
+    p {
+        width: 285px;
+        font-size: 18px;
+        margin-bottom: 30px;
+    }
+}
+
+.npm-orgs {
+    background-color: #2C3549;
+    background-attachment: fixed;
+    background-size: cover;
+    padding: 120px;
+
+    img {
+        margin: 0px 80px 135px 130px;
+    }
+
+    .npm-orgs-desc {
+        display: inline-block;
+
+        .npm-orgs-title {
+            font-size: 32px;
+            color: white;
+            width: 280px;
+        }
+
+        ul {
+            font-size: 18px;
+            color: white;
+            width: 335px;
+            li{
+                line-height: 25px;
+                margin-bottom: 10px;
+            }
         }
     }
 }
