Background set fixed

--- a/css/style.scss
+++ b/css/style.scss
@@ -62,8 +62,8 @@ nav {
 
 .signup {
     background: url('../images/hero-cityscape.PNG') no-repeat;
-    background-attachment: fixed;
     background-size: cover;
+    background-attachment: scroll;
     padding: 150px 300px;
 
     h1 {
