--- a/css/style.css
+++ b/css/style.css
@@ -50,8 +50,8 @@ nav li {
 
 .signup {
   background: url("../images/hero-cityscape.PNG") no-repeat;
-  background-attachment: fixed;
   background-size: cover;
+  background-attachment: scroll;
   padding: 150px 300px;
 }
 .signup h1 {
